--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "keywords": ["express", "html", "server"],
+  "keywords": [
+    "express",
+    "html",
+    "server"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.10"
   }
 }
