--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "multer": "^2.0.2"
   },
