--- a/Apps.yaml
+++ b/Apps.yaml
@@ -26,7 +26,6 @@
   title: Minecraft
   source: github
   repo: BitsNBytes25/Minecraft-Installer
-  branch: dev
   installer: dist/installer.sh
   author: Charlie Powell <cdp1337@bitsnbytes.dev>
   category: Game Server
@@ -45,7 +44,6 @@
   title: Palworld
   source: github
   repo: BitsNBytes25/Palworld-Installer
-  branch: dev
   installer: dist/installer.sh
   author: Drew Wort <drew@worttechnologies.tech>
   category: Game Server
@@ -62,11 +60,32 @@
   image: media/palworld-1920x1080.webp
   icon: media/palworld-128x128.webp
   thumbnail: media/palworld-640x360.webp
+- guid: 33201d07-4d80-c271-28d5-82548dde0a67
+  title: Valheim
+  source: github
+  repo: BitsNBytes25/Valheim-Installer
+  branch: main
+  installer: dist/installer.sh
+  author: Charlie Powell <cdp1337@bitsnbytes.dev>
+  category: Game Server
+  supports:
+    - "Debian 12, 13"
+    - "Ubuntu 24.04"
+  syntax:
+    - "--uninstall  - Perform an uninstallation"
+    - "--dir=<str> - Use a custom installation directory instead of the default (optional)"
+    - "--skip-firewall  - Do not install or configure a system firewall"
+    - "--non-interactive  - Run the installer in non-interactive mode (useful for scripted installs)"
+    - "--modded=<auto|modded|vanilla> - Choose between modded or vanilla server DEFAULT=auto"
+  image: media/valheim-1920x1080.webp
+  icon: media/valheim-128x128.webp
+  thumbnail: media/valheim-640x354.webp
+
+
 - guid: acdf1bec-2906-c20f-5a59-b0df072c29e8
   title: VEIN
   source: github
   repo: BitsNBytes25/VEIN-Dedicated-Server
-  branch: dev
   installer: dist/installer.sh
   author: Charlie Powell <cdp1337@bitsnbytes.dev>
   category: Game Server
