--- a/Apps.yaml
+++ b/Apps.yaml
@@ -19,6 +19,7 @@
     - "--non-interactive  - Run the installer in non-interactive mode (useful for scripted installs)"
     - "--skip-firewall  - Skip installing/configuring the firewall"
     - "--new-format  - Use the new save format (Nitrado/Official server compatible) OPTIONAL"
+    - "--branch=<str> - Use a specific branch of the management script repository DEFAULT=main"
   image: images/asa-1920x1080.webp
   icon: images/ark-128x128.webp
   thumbnail: images/ark_460x215.webp
@@ -34,9 +35,10 @@
     - "Ubuntu 24.04"
   syntax:
     - "--uninstall  - Perform an uninstallation"
-    - "--dir=<path> - Use a custom installation directory instead of the default (optional)"
+    - "--dir=<str> - Use a custom installation directory instead of the default (optional)"
     - "--skip-firewall  - Do not install or configure a system firewall"
     - "--non-interactive  - Run the installer in non-interactive mode (useful for scripted installs)"
+    - "--branch=<str> - Use a specific branch of the management script repository DEFAULT=main"
   image: media/minecraft-1280x720.webp
   icon: media/minecraft-128x128.webp
   thumbnail: media/minecraft-713x499.webp
